--- a/.env
+++ b/.env
@@ -1,1 +1,16 @@
 SECRET_KEY=django-insecure-yanw08cm4^-#*mv@ggb%sfx&&ke00ds-)9(m05(+__w#+1kcna
+
+# django.settings
+SQL_ENGINE=django.db.backends.postgresql
+SQL_USER=postgres
+SQL_PASSWORD=1234
+SQL_DATABASE=dealership_service
+SQL_HOST=db
+SQL_PORT=5432
+
+POSTGRES_DB=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_NAME=postgres
+POSTGRES_USER=postgres
+
+PORTS=8000:8000
