--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ graphviz==0.20
 instance==0.0.0.0.0.0a0.dev20210120
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-psycopg2-binary==2.9.3
+psycopg2==2.9.3
 py-moneyed==2.0
 pydot==1.4.2
 pyparsing==3.0.9
