Added apps and middleware settings

--- a/.env
+++ b/.env
@@ -5,12 +5,14 @@ SQL_ENGINE=django.db.backends.postgresql
 SQL_USER=postgres
 SQL_PASSWORD=1234
 SQL_DATABASE=dealership_service
-SQL_HOST=db
+#SQL_HOST=db
 SQL_PORT=5432
 
+# db settings
 POSTGRES_DB=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_NAME=postgres
 POSTGRES_USER=postgres
 
+# web
 PORTS=8000:8000
