--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,41 @@
 asgiref==3.5.2
 Babel==2.10.3
+certifi==2022.6.15
+charset-normalizer==2.1.0
+coreapi==2.3.3
+coreschema==0.0.4
 Django==4.0.5
 django-countries==7.3.2
+django-debug-toolbar==3.5.0
+django-debug-toolbar-force==0.1.8
 django-extensions==3.1.5
 django-money==3.0.0
+django-nine==0.2.5
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
+drf-yasg==1.20.0
 graphviz==0.20
+idna==3.3
+inflection==0.5.1
 instance==0.0.0.0.0.0a0.dev20210120
+itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+packaging==21.3
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 py-moneyed==2.0
 pydot==1.4.2
+PyJWT==2.4.0
 pyparsing==3.0.9
 python-dotenv==0.20.0
 pytz==2022.1
+requests==2.28.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+six==1.16.0
 sqlparse==0.4.2
 transmission==1.4.1
 typing_extensions==4.2.0
+uritemplate==4.1.1
+urllib3==1.26.9
