--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-countries==7.3.2
 django-debug-toolbar==3.5.0
 django-debug-toolbar-force==0.1.8
 django-extensions==3.1.5
+django-filter==22.1
 django-money==3.0.0
 django-nine==0.2.5
 djangorestframework==3.13.1
