Added celery params to .env file

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SQL_ENGINE=django.db.backends.postgresql
 SQL_USER=postgres
 SQL_PASSWORD=1234
 SQL_DATABASE=dealership_service
-#SQL_HOST=db
+SQL_HOST=db
 SQL_PORT=5432
 
 # db settings
@@ -16,3 +16,7 @@ POSTGRES_USER=postgres
 
 # web
 PORTS=8000:8000
+
+# celery
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
