--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+amqp==5.1.1
 asgiref==3.5.2
+async-timeout==4.0.2
 Babel==2.10.3
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.6.15
 charset-normalizer==2.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
+Deprecated==1.2.13
 Django==4.0.5
+django-celery-beat==2.3.0
+django-celery-results==2.4.0
 django-countries==7.3.2
 django-debug-toolbar==3.5.0
 django-debug-toolbar-force==0.1.8
@@ -12,6 +23,7 @@ django-extensions==3.1.5
 django-filter==22.1
 django-money==3.0.0
 django-nine==0.2.5
+django-timezone-field==5.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.20.0
@@ -21,16 +33,21 @@ inflection==0.5.1
 instance==0.0.0.0.0.0a0.dev20210120
 itypes==1.2.0
 Jinja2==3.1.2
+kombu==5.2.4
 MarkupSafe==2.1.1
 packaging==21.3
+prompt-toolkit==3.0.30
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 py-moneyed==2.0
 pydot==1.4.2
 PyJWT==2.4.0
 pyparsing==3.0.9
+python-crontab==2.6.0
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
+redis==4.3.4
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
@@ -38,5 +55,9 @@ six==1.16.0
 sqlparse==0.4.2
 transmission==1.4.1
 typing_extensions==4.2.0
+tzdata==2022.1
 uritemplate==4.1.1
 urllib3==1.26.9
+vine==5.0.0
+wcwidth==0.2.5
+wrapt==1.14.1
