--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.1.1
 asgiref==3.5.2
 async-timeout==4.0.2
+attrs==21.4.0
 Babel==2.10.3
 billiard==3.6.4.0
 celery==5.2.7
@@ -30,19 +31,23 @@ drf-yasg==1.20.0
 graphviz==0.20
 idna==3.3
 inflection==0.5.1
+iniconfig==1.1.1
 instance==0.0.0.0.0.0a0.dev20210120
 itypes==1.2.0
 Jinja2==3.1.2
 kombu==5.2.4
 MarkupSafe==2.1.1
 packaging==21.3
+pluggy==1.0.0
 prompt-toolkit==3.0.30
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+py==1.11.0
 py-moneyed==2.0
 pydot==1.4.2
 PyJWT==2.4.0
 pyparsing==3.0.9
+pytest==7.1.2
 python-crontab==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
@@ -53,6 +58,7 @@ ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 six==1.16.0
 sqlparse==0.4.2
+tomli==2.0.1
 transmission==1.4.1
 typing_extensions==4.2.0
 tzdata==2022.1
